Fixed executions build table alignment Also removed legacy files brought in from bad merge

--- a/src/plugins/cloud-foundry/view/applications/application/delivery-logs/details/execution.scss
+++ b/src/plugins/cloud-foundry/view/applications/application/delivery-logs/details/execution.scss
@@ -29,6 +29,9 @@
 
     table.table.table-outlined {
       border-width: 1px;
+      tbody > tr > td {
+        vertical-align: middle;
+      }
     }
 
     .event-result {
